<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".RegistroMascotaActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="356dp"
        android:layout_height="618dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:contentDescription="@string/rgt_masc"
            android:text="@string/rgt_masc"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:ems="10"
            android:hint="@string/nom_masc"
            android:inputType="textPersonName"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_edad"
                android:layout_width="202dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/edad_masc"
                android:text="@string/edad_masc"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/edad_masc"
                android:layout_width="145dp"
                android:layout_height="match_parent"
                android:entries="@array/edad_masc"
                android:spinnerMode="dropdown"
                android:textAlignment="textStart" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tam_masc"
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/tam_masc"
                android:text="@string/tam_masc"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/tam_mas"
                android:layout_width="151dp"
                android:layout_height="match_parent"
                android:entries="@array/tam_masc"
                android:spinnerMode="dropdown"
                android:textAlignment="textStart" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_rza"
                android:layout_width="202dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/nom_rza"
                android:text="@string/nom_rza"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/rza_masc"
                android:layout_width="151dp"
                android:layout_height="match_parent"
                android:entries="@array/rza_masc"
                android:spinnerMode="dropdown"
                android:textAlignment="textStart" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_rg_pso"
                android:layout_width="202dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/rg_pso"
                android:text="@string/rg_pso"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/rg_pso"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:entries="@array/rg_peso"
                android:spinnerMode="dropdown"
                android:textAlignment="textStart" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_mar_com"
                android:layout_width="202dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/mar_com"
                android:text="@string/mar_com"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/mar_com"
                android:layout_width="148dp"
                android:layout_height="match_parent"
                android:entries="@array/mar_com"
                android:spinnerMode="dropdown"
                android:textAlignment="textStart" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_hr"
                android:layout_width="271dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/hr_preg"
                android:text="@string/hr_preg"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <RadioGroup
                android:layout_width="204dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb1" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb2" />
            </RadioGroup>

        </LinearLayout>


        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/btn_save" />

    </LinearLayout>

</RelativeLayout>